Fix package.json syntax error

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "author": "JP Systems",
   "contributors": [
-    { "name": "Brad Davies" }
+    { "name": "Brad Davies" },
     { "name": "Chris Williams" },
     { "name": "Matt Shotton" },
     { "name": "Han Liu" }
