--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "Student Online Messenger online web application prototype developed for COMP2311 Systems Analysis & Design module.",
   "scripts": {
+    "bundle": "webpack -p --progress",
+    "dev": "webpack-dev-server",
     "lint": "standard --fix",
     "test": "npm run lint"
   },
@@ -36,6 +38,18 @@
     "vue-router": "^2.3.0"
   },
   "devDependencies": {
-    "standard": "^8.6.0"
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "css-loader": "^0.26.2",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.0",
+    "pug": "^2.0.0-beta11",
+    "pug-loader": "^2.3.0",
+    "sass-loader": "^6.0.2",
+    "standard": "^8.6.0",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
