--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "Student Online Messenger online web application prototype developed for COMP2311 Systems Analysis & Design module.",
   "scripts": {
-    "bundle": "webpack -p --progress",
-    "dev": "webpack-dev-server",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "lint": "standard --fix",
     "test": "npm run lint"
   },
@@ -40,15 +40,15 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.24.0",
+    "cross-env": "^3.2.4",
     "css-loader": "^0.26.2",
-    "html-webpack-plugin": "^2.28.0",
+    "file-loader": "^0.10.1",
     "node-sass": "^4.5.0",
-    "pug": "^2.0.0-beta11",
-    "pug-loader": "^2.3.0",
     "sass-loader": "^6.0.2",
     "standard": "^9.0.0",
-    "style-loader": "^0.13.2",
+    "vue-loader": "^11.2.0",
+    "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
