Update workflow for 'dev' and 'prod' pipelines
Development pipeline (npm run dev) now dynamically generates in-memory HMR files and serves them up on-the-fly.

Production pipeline (npm run build) now cleans the output folder (minus php files), generates static asset files with chunkhashes for cache-busting, and minfies all output. It also extracts CSS from Vue files and produces a cache-buster CSS file. All assets (vendor, manifest & main, CSS) are imported into the output HTML.

--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,10 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-# Ignore built js & js map files in www
+# Ignore built js, js map and html files in www
 www/*.js
 www/*.js.map
+www/*.html
 
 # Ignore PHP credentials
 credentials.php
