--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "babel-preset-latest": "^6.24.0",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.0",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.2",
     "standard": "^9.0.0",
