--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.0",
+    "lodash": "^4.17.4",
+    "marked": "^0.3.6",
     "qs": "^6.4.0",
     "vue": "^2.2.1",
     "vue-router": "^2.3.0"
