--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,8 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-# Ignore built js, js map and html files in www
-www/*.js
-www/*.js.map
-www/*.html
-www/*.css
+# Ignore built js, js map and html files in dist
+dist
 
 # Ignore PHP credentials
 credentials.php
